--- a/carrace.css
+++ b/carrace.css
@@ -50,6 +50,7 @@ display:none;
         height:100vh;
         background-image:url(background.jpg);
         background-size:cover;
+        background-repeat:no-repeat;
         margin:0px;
         padding:0px;
     }
